create backend compose

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,12 @@
     "www-e2e": {
       "tags": [],
       "implicitDependencies": ["www"]
+    },
+    "auth-rules": {
+      "tags": []
+    },
+    "backend": {
+      "tags": []
     }
   }
 }
