--- a/package.json
+++ b/package.json
@@ -34,35 +34,36 @@
     "@zeit/next-sass": "1.0.1"
   },
   "devDependencies": {
-    "@nrwl/workspace": "10.0.6",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.9.3",
-    "prettier": "2.0.4",
-    "@nrwl/next": "10.0.6",
-    "@nrwl/jest": "10.0.6",
-    "jest": "25.2.3",
-    "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
-    "cypress": "^4.1.0",
     "@nrwl/cypress": "10.0.6",
-    "@nrwl/web": "10.0.6",
+    "@nrwl/eslint-plugin-nx": "10.0.6",
+    "@nrwl/jest": "10.0.6",
+    "@nrwl/next": "10.0.6",
+    "@nrwl/node": "^10.2.0",
     "@nrwl/react": "10.0.6",
+    "@nrwl/web": "10.0.6",
+    "@nrwl/workspace": "10.0.6",
+    "@testing-library/react": "10.4.1",
+    "@types/jest": "25.1.4",
+    "@types/node": "~8.9.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
-    "@testing-library/react": "10.4.1",
-    "@nrwl/eslint-plugin-nx": "10.0.6",
-    "@typescript-eslint/parser": "2.19.2",
     "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "cypress": "^4.1.0",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
-    "eslint-plugin-cypress": "^2.10.3",
-    "node-sass": "4.13.1"
+    "jest": "25.2.3",
+    "node-sass": "4.13.1",
+    "prettier": "2.0.4",
+    "ts-jest": "25.2.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.9.3"
   }
 }
