--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "nx": "nx",
     "start": "nx serve",
+    "dev": "nx serve",
     "build": "nx build",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -27,11 +28,19 @@
   },
   "private": true,
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.16.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@zeit/next-sass": "1.0.1",
+    "apollo-boost": "^0.4.9",
+    "clsx": "^1.1.1",
     "document-register-element": "1.13.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "graphql": "^15.3.0",
     "next": "9.3.3",
-    "@zeit/next-sass": "1.0.1"
+    "node-fetch": "^2.6.1",
+    "react": "16.13.1",
+    "react-apollo": "^3.1.5",
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@nrwl/cypress": "10.0.6",
@@ -45,6 +54,7 @@
     "@testing-library/react": "10.4.1",
     "@types/jest": "25.1.4",
     "@types/node": "~8.9.4",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
     "@typescript-eslint/eslint-plugin": "2.19.2",
@@ -58,6 +68,7 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
+    "hasura-cli": "^1.3.1",
     "jest": "25.2.3",
     "node-sass": "4.13.1",
     "prettier": "2.0.4",
