--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: true
+      CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -36,8 +37,18 @@ jobs:
       # - name: Run e2e tests
       #   run: npm run affected:e2e:ci
       - name: Lint
-        run: npm run affected:lint:ci
+        run: npm run affected:lint -- --base=origin/master
       - name: Build
-        run: npm run affected:build:ci
+        run: npm run affected:build -- --base=origin/master
       - name: Test
-        run: npm run affected:test:ci
+        run: npm run affected:test -- --base=origin/master --codeCoverage --coverageDirectory=coverage
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: code-coverage-report
+          path: coverage
+      - name: Run codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: coverage
