format on commit

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "affected:lint": "nx affected:lint",
     "affected:dep-graph": "nx affected:dep-graph",
     "affected": "nx affected",
+    "check:pre-commit": "npm run format",
     "format": "nx format:write",
     "format:write": "nx format:write",
     "format:check": "nx format:check",
@@ -68,9 +69,11 @@
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
+    "husky": "^4.3.0",
     "jest": "25.2.3",
     "node-sass": "4.13.1",
     "prettier": "2.0.4",
+    "pretty-quick": "^3.0.2",
     "ts-jest": "25.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
