working on login and getting data

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,8 @@
           { "sourceTag": "*", "onlyDependOnLibsWithTags": ["*"] }
         ]
       }
-    ]
+    ],
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "overrides": [
     {
