--- a/package.json
+++ b/package.json
@@ -25,25 +25,36 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "graphql-codegen": "graphql-codegen --config apps/www/codegen.yml"
   },
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@auth0/nextjs-auth0": "^0.16.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@zeit/next-sass": "1.0.1",
     "apollo-boost": "^0.4.9",
+    "apollo-link-http-common": "^0.2.16",
+    "apollo-link-ws": "^1.0.20",
     "clsx": "^1.1.1",
     "document-register-element": "1.14.6",
     "graphql": "^15.3.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "9.5.3",
     "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.17.8",
+    "@graphql-codegen/introspection": "1.17.8",
+    "@graphql-codegen/typescript": "1.17.8",
+    "@graphql-codegen/typescript-operations": "1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "2.0.6",
     "@nrwl/cypress": "10.0.6",
     "@nrwl/eslint-plugin-nx": "10.0.6",
     "@nrwl/jest": "10.0.6",
