--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,6 +9,17 @@ jobs:
     env:
       CI: true
       CODECOV_TOKEN: ${{secrets.CODECOV_TOKEN}}
+      NX_BACKEND_URI: ${{secrets.BACKEND_URI_DEV}}
+      NX_BACKEND_SUBSCRIPTION_URI: ${{secrets.BACKEND_SUBSCRIPTION_URI_DEV}}
+      NX_APP_HOST: ${{secrets.APP_HOST_DEV}}
+      NX_AUTH0_DOMAIN: ${{secrets.AUTH0_DOMAIN_DEV}}
+      NX_AUTH0_CLIENT_ID: ${{secrets.AUTH0_CLIENT_ID_DEV}}
+      NX_AUTH0_CLIENT_SECRET: ${{secrets.AUTH0_CLIENT_SECRET_DEV}}
+      NX_AUTH0_REDIRECT_URI: ${{secrets.AUTH0_REDIRECT_URI_DEV}}
+      NX_AUTH0_POST_LOGOUT_REDIRECT_URI: ${{secrets.AUTH0_POST_LOGOUT_REDIRECT_URI_DEV}}
+      NX_AUTH0_COOKIE_DOMAIN: ${{secrets.AUTH0_COOKIE_DOMAIN_DEV}}
+      NX_AUTH0_COOKIE_SECRET: ${{secrets.AUTH0_COOKIE_SECRET_DEV}}
+      NX_AUTH0_AUDIENCE: ${{secrets.AUTH0_AUDIENCE_DEV}}
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
