--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -47,12 +47,14 @@ jobs:
       # TODO: Find a way to allow e2e to be tested
       # - name: Run e2e tests
       #   run: npm run affected:e2e:ci
-      - name: Lint
-        run: npm run affected:lint -- --base=origin/master
-      - name: Build
-        run: npm run affected:build -- --base=origin/master
+      # - name: Lint
+      #   run: npm run affected:lint -- --base=origin/master
+      # - name: Build
+      #   run: npm run affected:build -- --base=origin/master
       - name: Test
         run: npm run affected:test -- --base=origin/master --codeCoverage --coverageDirectory="../../coverage"
+      - name: List dirs
+        run: ls -la
       - name: Archive code coverage results
         uses: actions/upload-artifact@v2
         with:
