--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -52,7 +52,7 @@ jobs:
       # - name: Build
       #   run: npm run affected:build -- --base=origin/master
       - name: Test
-        run: npm run affected:test -- --base=origin/master --codeCoverage --coverageDirectory="../../coverage"
+        run: npm run affected:test -- --base=origin/master --codeCoverage
       - name: List dirs
         run: ls -la
       - name: Archive code coverage results
