--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -58,8 +58,8 @@ jobs:
         with:
           name: code-coverage-report
           path: coverage
-      - name: Run codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: coverage
+      # - name: Run codecov
+      #   uses: codecov/codecov-action@v1
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+      #     directory: coverage
